--- a/index.html
+++ b/index.html
@@ -1,28 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
+		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+		<title>Frontend Mentor | QR code component</title>
 
-  Improve your front-end skills by building projects
+		<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+		<style>
+			@font-face {
+				font-family: "Outfit";
+				src: local(Outfit);
+			}
+			.attribution {
+				font-size: 11px;
+				text-align: center;
+			}
+			.attribution a {
+				color: hsl(228, 45%, 44%);
+			}
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+			body {
+				background-color: hsl(212, 45%, 89%);
+			}
+			#qrCodeComponent {
+				background-color: white;
+				text-align: center;
+				font-family: "Outfit";
+			}
+			#qrCodeComponent h1 {
+				color: hsl(218, 44%, 22%);
+			}
+			#qrCodeComponent p {
+				color: hsl(220, 15%, 55%);
+			}
+		</style>
+	</head>
+	<body>
+		<div id="qrCodeComponent">
+			<img src="/images/image-qr-code.png" alt="Image of QR code" />
+
+			<h1>Improve your front-end skills by building projects</h1>
+
+			<p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+		</div>
+
+		<div class="attribution">
+			Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
+			<a href="#">Henri Hirvelä</a>.
+		</div>
+	</body>
 </html>
