index style as separate file
Took  the style from index.html and put it in it's own file index.css.

--- a/index.html
+++ b/index.html
@@ -6,38 +6,8 @@
 		<!-- displays site properly based on user's device -->
 
 		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
-
+		<link rel="stylesheet" href="index.css" />
 		<title>Frontend Mentor | QR code component</title>
-
-		<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-		<style>
-			@font-face {
-				font-family: "Outfit";
-				src: local(Outfit);
-			}
-			.attribution {
-				font-size: 11px;
-				text-align: center;
-			}
-			.attribution a {
-				color: hsl(228, 45%, 44%);
-			}
-
-			body {
-				background-color: hsl(212, 45%, 89%);
-			}
-			#qrCodeComponent {
-				background-color: white;
-				text-align: center;
-				font-family: "Outfit";
-			}
-			#qrCodeComponent h1 {
-				color: hsl(218, 44%, 22%);
-			}
-			#qrCodeComponent p {
-				color: hsl(220, 15%, 55%);
-			}
-		</style>
 	</head>
 	<body>
 		<div id="qrCodeComponent">
