Fixed image not showing
Changed the image file path to point to the current folder and not the root one.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<div id="qrCodeComponent">
-			<img src="/images/image-qr-code.png" alt="Image of QR code" />
+			<img src="images/image-qr-code.png" alt="Image of QR code" />
 
 			<h1>Improve your front-end skills by building projects</h1>
 
