QR code centering and sizing
Finally realized how to center.
Correct sizing for QR-code-image. Will change according to container size.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 		<title>Frontend Mentor | QR code component</title>
 	</head>
 	<body>
-		<div id="qrCodeComponent">
-			<img src="images/image-qr-code.png" alt="Image of QR code" />
+		<div class="container">
+			<div id="qrCodeComponent">
+				<img src="images/image-qr-code.png" alt="Image of QR code" />
 
-			<h1>Improve your front-end skills by building projects</h1>
+				<h2>Improve your front-end skills by building projects</h2>
 
-			<p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+				<p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+			</div>
 		</div>
 
 		<div class="attribution">
